# interfold

./: CHANGELOG.md  Cargo.toml  SHA256SUMS  SOURCE_HASH  checksums.json  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  releases.yml
agent/: DKG_CRASH_RECOVERY_CHANGES.md  DKG_CRASH_RECOVERY_FINDINGS.md  DKG_RESTART_SAFETY.md
agent/flow-trace/: 00_INDEX.md  01_REGISTRATION.md  02_TOKENS_AND_ACTIVATION.md  03_E3_REQUEST_AND_COMMITTEE.md  04_DKG_AND_COMPUTATION.md  05_FAILURE_REFUND_SLASHING.md  06_DEACTIVATION_AND_COMPLETION.md
circuits/lib/: Nargo.toml
crates/aggregator/: Cargo.toml
crates/bfv-client/: Cargo.toml
crates/ciphernode-builder/: Cargo.toml
crates/cli/: Cargo.toml
crates/committee-hash/: Cargo.toml
crates/compute-provider/: Cargo.toml  Readme.md
crates/config/: Cargo.toml
crates/crypto/: Cargo.toml
crates/dashboard/: Cargo.toml
crates/dashboard/assets/: app.css  app.js  index.html
crates/dashboard/src/: dashboard.html  lib.rs  projection.rs  updates.rs
crates/data/: Cargo.toml
crates/entrypoint/: Cargo.toml
crates/events/: Cargo.toml
crates/evm/: Cargo.toml
crates/evm-helpers/: Cargo.toml
crates/fhe/: Cargo.toml
crates/fhe-params/: Cargo.toml
crates/hamt/: Cargo.toml
crates/indexer/: Cargo.toml
crates/init/: Cargo.toml
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs  log_collector.rs  logger.rs  tracing_layer.rs
dappnode/: README.md  dappnode_package.json
docs/: .gitignore  next-env.d.ts  next.config.js  theme.config.jsx
scripts/: cca-demo.sh
(+400 files in other folders)
