[package]
name = "e3-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lightweight node monitoring dashboard for Interfold ciphernodes"

[dependencies]
actix-web.workspace = true
alloy.workspace = true
anyhow.workspace = true
e3-ciphernode-builder.workspace = true
e3-config.workspace = true
e3-events.workspace = true
e3-evm.workspace = true
e3-logger = { workspace = true }
e3-net.workspace = true
e3-utils.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
